Fixed Break in Animations Switcher

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ canvas {
 	min-width: 600px;
 }
 .App-header {
-	background-color: #20add8;
+	background-color: #0c7eb3;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
